Fixed 1336 bug where message in main-image showed cropped

--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -736,8 +736,8 @@
         font-size: 15.5px;
       }
       @media (min-width: 1366px) and (max-height: 768px){
-        left: 37.3%;
-        font-size: 18px;
+        left: 38%;
+        font-size: 17px;
       }
       @media (min-width: 1440px) and (max-height: 900px){
         left: 38%;
